hphp/hack/test/typecheck/fc_enum_cyclic_constraint.php.exp
File "fc_enum_cyclic_constraint.php", line 3, characters 17-17:
Cyclic enum constraint (Typing[4146])
